--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-api-1.0-sdk</artifactId>
+      <version>1.9.60</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
